# Hw11_web_FastAPI

./: .gitignore  README.md  main.py  pyproject.toml  test.db
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
migrations/versions/: 0c2d2d6dcdac_add_user_verification.py  a0ba8962601b_init.py  aec9c5e9480e_add_user_role.py  da9d108f860e_add_table_users.py
src/conf/: config.py  messages.py
src/database/: db.py
src/entity/: models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/schemas/: contact.py  user.py
src/services/: auth.py  email.py  role.py
src/templates/: index.html
tests/: conftest.py  test_main.py  test_repository_contacts.py  test_route_auth.py  test_route_contacts.py
