[tool.poetry]
name = "hw11-web-fastapi"
version = "0.1.0"
description = "REST API for contacts storage and management"
authors = ["Dishalex <dishalex@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "hw11_web_fastapi"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.108.0"
alembic = "^1.13.1"
sqlalchemy = "^2.0.24"
asyncpg = "^0.29.0"
uvicorn = "^0.25.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pydantic = {extras = ["email"], version = "^2.5.3"}
python-multipart = "^0.0.6"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
libgravatar = "^1.0.4"
fastapi-mail = "^1.4.1"
python-dotenv = "^1.0.0"
fastapi-limiter = "^0.1.6"
redis = ">=4.0.0,<5.0.0"
jinja2 = "^3.1.2"
cloudinary = "^1.37.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
